--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ rsconnect/
 .Rproj.user
 HumanHabenula.Rproj
 docs
+
+
+# exclude results
+results/*
+
+# exception to the rule
+!results/.gitkeep 
